Add virtualenv to image

--- a/xenial/Dockerfile
+++ b/xenial/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:xenial
 
 RUN apt-get update \
   && apt-get install --no-install-recommends -y \
-      ca-certificates iproute2 git lsb-release \
+      ca-certificates iproute2 git lsb-release python-pip \
   && apt-get autoremove  \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* /var/cache/apt/*cache.bin
@@ -10,7 +10,7 @@ RUN apt-get update \
 RUN git clone --branch master --depth=1 \
   https://github.com/openstack-dev/devstack
 
-RUN ln /usr/bin/env /usr/bin/sudo 
+RUN ln /usr/bin/env /usr/bin/sudo
 
 RUN apt-get update \
   && cd devstack \
@@ -18,3 +18,7 @@ RUN apt-get update \
   && apt-get autoremove  \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* /var/cache/apt/*cache.bin
+
+RUN pip install -U pip \
+  && pip install virtualenv \
+  && virtualenv /venv
