--- a/fedora-23/Dockerfile
+++ b/fedora-23/Dockerfile
@@ -1,6 +1,6 @@
 FROM fedora:23
 
-RUN dnf install -y git iproute redhat-lsb \
+RUN dnf install -y git iproute python-pip redhat-lsb \
   && dnf clean all
 
 RUN git clone --branch master --depth=1 \
@@ -10,4 +10,8 @@ RUN ln /usr/bin/env /usr/bin/sudo
 
 RUN cd devstack \
   && tools/install_prereqs.sh \
-  && dnf clean all\
+  && dnf clean all
+
+RUN pip install -U pip \
+  && pip install virtualenv \
+  && virtualenv /venv
